--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,28 @@
+:root {
+    --primary-color: rgb(64, 64, 64);
+    --bg-color: rgb(255, 255, 255);
+    --input-color: rgb(64,64,64);
+    --input-bg-color: rgb(236, 236, 236);
+    --input-placeholder-color: rgb(128,128,128);
+    --switch-bg-color: rgb(224, 224, 224);
+    --border-container-color: rgb(0,0,0);
+}
+
+[data-theme="dark"] {
+    --primary-color: rgb(32, 32, 255);
+    --bg-color: rgb(0,0,0);
+    --input-color: rgb(192,192,192);
+    --input-bg-color: rgb(21, 21, 21);
+    --input-placeholder-color: rgb(128,128,128);
+    --switch-bg-color: rgb(32, 32, 32);
+    --border-container-color: rgb(255, 255, 255);
+}
+
+
 body {
     margin: 0;
     padding: 0;
+    background-color: var(--bg-color);
 }
 
 ul, li {
@@ -17,8 +39,9 @@ li {
 .container {
     width: 350px;
     margin: auto;
-    border: 1px solid #000;
+    border: 1px solid var(--border-container-color);
     height: 99vh;
+    color: var(--primary-color);
 }
 
 .container > form {
@@ -33,27 +56,35 @@ li {
 
 .form-control > label {
     display: block;
-    font-size: 10px;
-    color: rgb(129, 129, 129);
+    font-size: 16px;
+    color: var(--primary-color);
     margin-bottom: 5px;
 }
 
 .form-control > input {
     width: calc(100% - 15px);
     border: none;
-    border-bottom: 2px solid rgb(129, 129, 129);
+    border-bottom: 2px solid var(--primary-color);
     padding-left: 15px;
     padding-bottom: 5px;
     outline: none;
+    color: var(--input-color);
+    background-color: var(--input-bg-color);
+}
+
+.form-control > ::placeholder {
+    color: var(--input-placeholder-color);
 }
 
 .form-control > input[type='submit'] {
     border: none;
     cursor: pointer;
+    font-size: 16px;
     border-radius: 5px;
     width: 100%;
     padding: 15px 0;
     transition: all .3s;
+    color: var(--primary-color);
 }
 
 .form-control > input[type='submit']:hover {
@@ -77,7 +108,7 @@ li {
     position: relative;
     height: 30px;
     width: 55px;
-    background-color: #ececec;
+    background-color: var(--switch-bg-color);
     border-radius: 100px;
     transition: background .3s;
     box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.336);
@@ -89,7 +120,6 @@ li {
     height: 28px;
     width: 28px;
     background-color: #ffffff;
-/*    background-color: #155155155;*/
     box-shadow: 2px 0px 3px rgba(0, 0, 0, 0.336);
     top: 1px;
     left: 1px;
@@ -98,7 +128,7 @@ li {
 }
 
 .switch-active {
-    background-color: #36b32b;
+    background-color:rgb(32, 32, 255);
 }
 
 .switch-active > .circle {
@@ -110,17 +140,3 @@ li {
     display: none;
 }
 
-.dark {
-    background-color: #1d1d1d;    
-}
-
-.dark > .container {
-    width: 350px;
-    margin: auto;
-    border: 1px solid #fff;
-    height: 99vh;
-}
-
-.dark > .control {
-    background-color: white;
-}
